# Basic-Blockchain

./: CMakeLIsts.txt  CMakeLists.txt  README.md
include/: check.h
src/: blockchain.c
